# Wols_CA_OutlookOrganizer

./: .clang-format  CMakeLists.txt  LEGAL_QT.txt  README.md
Documents/: Outlook Manager Rules.docx
Wols_CA_OutlookOrganiser/src/: Wols_CA_OutlookOrganiser.cpp  resources.qrc
Wols_CA_OutlookOrganiser/src/Core/: ConfigManager.cpp  Logger.cpp
Wols_CA_OutlookOrganiser/src/Include/: AsyncWorker.hpp  ConfigManager.hpp  FolderConfigDialog.hpp  Logger.hpp  MainWindow.hpp  OutlookManager.hpp  RuleEditorDialog.hpp  RuleModels.hpp  RulesEngine.hpp  RulesManager.hpp  resource.h
Wols_CA_OutlookOrganiser/src/Outlook/: OutlookManager_Core.cpp  OutlookManager_Data.cpp  OutlookManager_Engine.cpp
Wols_CA_OutlookOrganiser/src/Resource/: resource.rc
Wols_CA_OutlookOrganiser/src/Rules/: RulesEngine.cpp  RulesManager.cpp
Wols_CA_OutlookOrganiser/src/UI/: FolderConfigDialog.cpp  MainWindow.cpp  RuleEditorDialog.cpp
